--- a/Backend/.env
+++ b/Backend/.env
@@ -4,4 +4,4 @@ DB_PASS=root
 DB_NAME=branchflowdb
 PORT=5000
 SECRET_KEY=secret1
-CORS_ORIGIN=http://localhost:5173
+CORS_ORIGIN=http://branchflowdocker-frontend:5173
